# pyNEC-Utilities

./: .gitignore  .readthedocs.yaml  README.md  pynecutility.py  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py
docs/: PyNEC-1.7.3.6-cp38-cp38-linux_x86_64.whl  api.rst  cli.rst  conf.py  examples.rst  index.rst
pynec_utilities/: __init__.py  __main__.py  cli.py  pynecutility.py
