[metadata]
name = PyNEC Utilities
version = attr: pynec-utility.__version__
author = Electro707 (Jamal Bouajjaj)
author_email = develop@electro707.com
description = A set of utilities for PyNEC
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v2 (GPLv2)
url = https://github.com/Electro707/pyNEC-Utilities
project_urls =
    Bug Tracker = https://github.com/Electro707/pyNEC-Utilities/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
packages = pynec_utilities

[options.entry_points]
console_scripts =
    pynec-utilities = pynec_utilities.cli:cli